css/components/product-category.css
.categories-section{
  display: flex;
  justify-content: space-between;
  padding: 40px 0 0;
  flex-wrap: wrap;
  gap: 1.5rem;
}


.category-card{
  position: relative;
  display:flex;
  width: 318px;
  max-width: 100%;
  min-height: 420px;
  height: 500px;
  border-radius: 20px;
  background-size: cover;
  background-position: center;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}
  .category-name{
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
    text-align: center;
  }
  .overlay{
  position: absolute;
  inset: 0;
  background-color: rgb(0, 0, 0, 0.25);
  z-index: 1;
  /* border-radius: 20px; */
}

  .casual{
    background: url("../../images/logo/casual.jpg")  no-repeat center;
    background-size: cover;
  }

  .esportivo{
    background: url("../../images/logo/esportivo.jpg")  no-repeat center;
    background-size: cover;
  }

  .moderno{
    background: url("../../images/logo/moderno.jpg")  no-repeat center;
    background-size: cover;
  }

  .futurista{
    background: url("../../images/logo/futurista.jpg")  no-repeat center;
    background-size: cover;
  }

  @media (max-width:1024px){
    .category-card{
      width: calc(50% - 0.75rem);
    }
  }

  @media (max-width:768px){
    .categories-section{
      justify-content: center;
      gap: 1rem;
    }

    .category-card{
      width: 100%;
      height: 380px;
    }
  }

  @media (max-width:500px){
    .category-card{
      width: 100%;
      height: 320px;
    }
  }

